fix: fix the hero image on mobile view

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   /* border: 2px solid red; */
   position: fixed;
   top: 0;
-  z-index: 99;
+  z-index: 999;
 }
 
 .logo-div {
@@ -398,8 +398,8 @@ background-color: #0758a8;
     top: -800px;
     /* height: 300px; */
     width: 100vw;
-    background: #333;
-    /* background: #004080; */
+    /* background: #333; */
+    background: #004080;
     padding-top: 0px;
     transition: 0.3s;
 }
@@ -451,12 +451,28 @@ background-color: #0758a8;
   display: none;
 }
 
-
+  .hero {
+    position: relative;
+  }
   .hero h2 {
-    font-size: 28px;
+    font-size: 2.4rem;
+  }
+
+  .hero-text-div {
+    border: 2px solid red;
+    width: 80%;
+    z-index: 99;
   }
 
   .program-list {
     flex-direction: column;
+  }
+
+  .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    z-index: 10;
   }
 }
